# chess

./: .gitignore  CMakeLists.txt  board.cpp  board.h  cell.cpp  cell.h  checker.cpp  checker.h  constants.h  figures.cpp  figures.h  game_pos.txt  game_position.cpp  game_position.h  main.cpp
lib/Graph_lib/: Graph.cpp  Graph.h  Point.h
